<resources>
    <string name="app_name">BikeLog</string>
    <string name="action_settings">settings</string>
    <string name="action_example">settings</string>
    <string name="title_activity_location">title_activity_location</string>
    <!-- General Strings all start with gs_<name> -->
    <string name="gs_ok">OK</string>
    <string name="gs_yes">YES</string>
    <string name="gs_no">NO</string>
    <string name="gs_quit">QUIT</string>
    <string name="gs_save">SAVE</string>
    <string name="gs_close">CLOSE</string>
    <!-- Welcome Screen Strings all start with ws_<name> -->
    <string name="ws_title">Welcome to BikeLog App</string>
    <string name="ws_label_about">About</string>
    <string name="ws_about">This application will save your activity
    progress and will let you upload to your preferred applications
    such as endomondo, strava etc and keep you safe in the process!</string>
    <string name="ws_label_disclaimer">Disclaimer</string>
    <string name="ws_disclaimer">Copyright is the primary intellectual property
        right protecting websites. This is a free copyright notice template,
        designed for inclusion on a website. It includes an assertion of copyright
        ownership, as well as provisions concerning the licensing of website copyright,
        the infringement of website copyright materials, and copyright notifications.</string>
    <string name="ws_button">I Understand and Want to Continue</string>
    <string name="ws_quit">Are you sure you want to quit and give up already?</string>
    <!-- Settings Screen Strings all start with ss_<name> -->
    <string name="ss_title">BikeLog User Profile</string>
    <string name="ss_hint_name">(*)Your Name Here</string>
    <string name="ss_hint_phone">(*)SOS Phone Number Here</string>
    <string name="ss_hint_message">Your rescue message here!</string>
    <string name="ss_default_message">Please help me, im in trouble! Here are my coordinates:</string>
    <string name="ss_hint_updateInterval">Update interval (seconds) here!</string>
    <string name="ss_checkbox_text">Autoupdate location</string>

    <string name="hello_blank_fragment">Hello activity fragment</string>
</resources>
